# elementary-code-plugin-example

./: README.md  meson.build
src/: helloworldplugin.plugin  helloworldplugin.vala
vapi/: NOTE  codecore.h  codecore.vapi
